[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokescope"
version = "0.1.0"
description = "Lightweight SDK for tracking LLM cost and latency"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
